@@ -542,6 +542,10 @@
 # broker starts but will not be restarted if the connection fails.
 #start_type automatic
 
+# Set the amount of time a bridge using the automatic start type will wait
+# until attempting to reconnect.  Defaults to 30 seconds.
+#restart_timeout 30
+
 # Set the amount of time a bridge using the lazy start type must be idle before
 # it will be stopped. Defaults to 60 seconds.
 #idle_timeout 60
