@@ -6,5 +6,6 @@ connection bridge_sample
 address 127.0.0.1:1888
 topic bridge/# both 2
 notifications false
+restart_timeout 5
 
 log_type debug
