@@ -6,3 +6,5 @@ connection bridge_sample
 address 127.0.0.1:1888
 topic bridge/# both 1
 notifications false
+restart_timeout 5
+try_private true
